kubernetes/ingress/store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-store-ingress
  namespace: demo
spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-front
            port:
              number: 80

      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: store-admin
            port:
              number: 80
